# pixel-collector

./: CMakeLists.txt  README.md
src/: Coin.cpp  Coin.h  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
